# dummie

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  pyproject.toml
.claude/skills/dum-e/: SKILL.md
.claude/skills/dum-e/reference/: primitives.md  shot-log-schema.md
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
calibration/: joints.json
documents/brainstorming/: brainstorming-session-2026-06-19-1434.md
documents/implementation-artifacts/: 1-1-project-scaffold-dev-environment.md  1-2-assemble-so101-mount-camera.md  1-3-camera-capture-api.md  1-4-hardware-bringup-verification.md  1-5-arm-safety-module.md  1-6-hand-eye-self-calibration.md  sprint-status.yaml
documents/planning-artifacts/: architecture.md  epics.md
documents/planning-artifacts/prds/prd-dum-e-2026-06-19/: .decision-log.md  prd.md  reconcile-brainstorm.md  review-rubric.md
print/: camera mount 1.gcode  camera+decal.gcode
schemas/: README.md
scripts/: acquire.py  bringup.py  calibrate.py  choreo.py  cinema.py  dance.py  perform.py  photo.py  setup_servos.py  shoot.py  stitch.py  survey.py
src/dum_e/: __init__.py  arm.py  calibration.py  camera.py  cli.py  config.py  primitives.py  rundir.py  safety.py  shotlog.py  stitch.py  tracker.py
src/dum_e/acquire/: __init__.py  base.py
tests/: test_arm_safety.py  test_bringup.py  test_calibration.py  test_camera.py  test_cli.py  test_rundir.py  test_smoke.py
train/: README.md
